--- a/Projets/OhMyFood/css/style-menu-enchantee.css
+++ b/Projets/OhMyFood/css/style-menu-enchantee.css
@@ -216,15 +216,19 @@ td {
 
 /*font-family: devonshire (enchantee), menu segoe print*/
 img {
+  /*Specifity (0,0,1).*/
   max-width: 9%;
   vertical-align: middle;
+  /*align the note with the last h2, is ok for the first too.*/
 }
 
 .img {
+  /*concern only the first title, specificity applies (0,1,0).*/
   max-width: 12%;
 }
 
 h2 > span {
+  /* the text of the last title*/
   vertical-align: middle;
 }
 
@@ -259,6 +263,7 @@ h2 > span {
 .font {
   font-weight: normal;
   font-family: "arial black";
+  /*title on the white*/
 }
 @media (orientation: landscape) and (min-width: 992px) {
   .font {
@@ -341,7 +346,9 @@ tr {
 
 .double-line {
   background: linear-gradient(to right, #000, #000, #000, #fcdfdb, #fcdfdb, #fcdfdb, #fcdfdb, #000, #000, #000) no-repeat center;
+  /*no-repeat for 1 line*/
   background-size: 90vw 5px;
+  /*horizontal size of the background, so the size of the gradient. height of the line.*/
 }
 
 /*# sourceMappingURL=style-menu-enchantee.css.map */
