--- a/Projets/OhMyFood/css/style.css
+++ b/Projets/OhMyFood/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Devonshire&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Croissant+One&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Cookie&display=swap");
@@ -227,7 +228,9 @@ td {
 .menus__card {
   width: 40%;
   height: 50vh;
+  /*50% de la hauteur de l'écran = 50vh*/
   margin: 1.3vw;
+  /* 1.3% de la largeur de l'écran = 1.3vw*/
   padding: 1vw;
   text-align: center;
   box-shadow: 0 0 1.3vw #dad8d8;
@@ -294,6 +297,7 @@ td {
 
 .font {
   font-weight: normal;
+  /* not default bold*/
 }
 .font__title {
   margin: 0;
@@ -301,6 +305,7 @@ td {
 @media (orientation: landscape) {
   .font__title {
     height: 50%;
+    /*separate __title and __subtitle*/
   }
 }
 .font__title--enchantee {
@@ -311,14 +316,18 @@ td {
   .font__title--enchantee {
     font-size: 3vw;
     line-height: 2.6vw;
+    /*no big space between "la note" and "enchantee" if they are one above the other*/
   }
 }
 .font__title--alafrancaise {
   font-size: 3.5vw;
   font-family: "Croissant One";
   background: linear-gradient(80deg, #e38a12 0%, #a56799 50%, #8f5aff 100%);
+  /*gradient color (degree of skew, $color left-to-right percent)*/
   -webkit-background-clip: text;
+  /*background becomes the color of the text */
   color: transparent;
+  /*text being transparent allows you to see the background-clip work.*/
 }
 @media (orientation: landscape) {
   .font__title--alafrancaise {
@@ -391,8 +400,11 @@ td {
 .btn {
   display: flex;
   justify-content: center;
+  /*.btn in the middle of the page*/
   text-align: center;
+  /*content of .btn being in the middle of his parent*/
   margin-bottom: 15vw;
+  /*footer being fixed, allows .btn to be full visible.*/
 }
 @media (orientation: landscape) {
   .btn {
@@ -429,6 +441,7 @@ td {
 .btn--soon > h2 {
   font-size: 4vw;
   margin: 0;
+  /*bouton being too big with parent's margin*/
 }
 @media (orientation: landscape) {
   .btn--soon > h2 {
