--- a/Projets/OhMyFood/scss/Partials/Pages/menu-alafrancaise.scss
+++ b/Projets/OhMyFood/scss/Partials/Pages/menu-alafrancaise.scss
@@ -1,3 +1,7 @@
+/* IMPORTANT ! run sass with the command : npm run alafrancaise*/
+/* IMPORTANT ! run sass with the command : npm run alafrancaise*/
+/* IMPORTANT ! run sass with the command : npm run alafrancaise*/
+/* IMPORTANT ! run sass with the command : npm run alafrancaise*/
 @import "../Utils/variables";
 @import "../Utils/mixins";
 @import "../Base/base";
@@ -10,55 +14,50 @@
 }
     
 .menus {
-    padding: 6.5vw; /*vw for responsive padding*/
-    text-align: center;
+    @include menu-details__menus;
     &__card {
-        width:90%;
-        height: auto;
-        margin: 0;
-        padding: 3.9vw;
-        text-align: center;
-        box-shadow: 0 0 1rem #dad8d8;
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
+       @include menu-details__card;
     }
 }
 
 .font {
     font-weight: normal;
-    font-family: "arial black";
+    font-family: "arial black"; /*title on the white*/
+    @media (orientation: landscape) {
+        @media (min-width: 992px) {
+            font-size: 2.3vw;
+        }
+    }
     &__title{
         &--alafrancaise {
             font-size: 3vw;
             font-family: 'Croissant One';
-            background: -webkit-linear-gradient(-80deg, map-get($colour-text-alafrancaise, first-title) 0%,map-get($colour-text-alafrancaise, secund) 50%, map-get($colour-text-alafrancaise, last-title) 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            background: -webkit-linear-gradient(80deg, map-get($colour-text-alafrancaise, first-title) 0%,map-get($colour-text-alafrancaise, secund) 50%, map-get($colour-text-alafrancaise, last-title) 100%);
+            /*gradient color (degree of skew, $color left-to-right percent)*/
+            -webkit-background-clip: text;/*background becomes the color of the text*/
+            color: transparent;/*text being transparent allows you to see the background-clip work.*/
         }            
     }
-}
-
-tr {
-    height: 3rem;
-}
-
-.font {
     &__table {
 		&--alafrancaise {
-			font-size: 2.05vw;
+			font-size: 1.8vw;
             font-family: Cambria;
-            margin-bottom: 15rem;
-            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
-                margin: 0;
-                font-size: 2.5vw;
-                margin-bottom: 10rem;
-                @media (max-width:768px) {
-                    margin-bottom: 5rem;
+            margin-bottom: 10vw;
+            @media (orientation: landscape) {
+                font-size: 2vw;
+            }
+        }
+        &--title {
+            font-size: 2.8vw;
+            @media (orientation: landscape) {
+                @media (min-width: 992px) {
+                    font-size: 2.5vw;
                 }
             }
-		}
+        }
+
 	}
+	
 	&__color {
 		&--alafrancaise {
 			&-first {
@@ -74,56 +73,56 @@ tr {
     }
 }
 
+tr {
+    height: 3.9vw;
+}
+
 .table {
-    &__part {
-        height: 10rem;
-        vertical-align: bottom;
-    }  
     &__cell {
         &--left {
             text-align: left;
-            padding-left: 5rem;
-            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
-                padding-left: 1.3vw;
-                padding-right: 4rem;
+            padding-left: 6.5vw;
+            @media (max-width:1280px){
+                padding-left: 6.5vw;
+                padding-right: 10vw;
             }
         }
         &--right {
             text-align: right;
             font-weight: bold;
-            padding-right: 5rem;
-            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
-                padding-right: 1.3vw;
+            padding-right: 6.5vw;
+            @media(max-width:1280px) {
+                padding-right: 5.2vw;
             }
         }
     }
 }
 
-.double-line--first {
-    height:10%;   
+.double-line--first { 
     background: linear-gradient(to right, map-get($colour-text-alafrancaise, first-title), map-get($colour-card, alafrancaise), map-get($colour-card, alafrancaise), map-get($colour-text-alafrancaise, first-title)) no-repeat center;
-    background-size:90vw 5px;
+    /*no-repeat for 1 line*/
+    background-size:90vw 5px; /*horizontal size of the background, so the size of the gradient. height of the line.*/
 }
 
-.double-line--secund {
-    height:10%;   
+.double-line--secund { 
     background: linear-gradient(to right, map-get($colour-text-alafrancaise, secund), map-get($colour-card, alafrancaise), map-get($colour-card, alafrancaise), map-get($colour-text-alafrancaise, secund)) no-repeat center;
     background-size:90vw 5px;
 }
 
-.double-line--third {
-    height:10%;   
+.double-line--third {   
     background: linear-gradient(to right, map-get($colour-text-alafrancaise, third), map-get($colour-card, alafrancaise), map-get($colour-card, alafrancaise), map-get($colour-text-alafrancaise, third)) no-repeat center;
     background-size:90vw 5px;
 }
-.anim-underline-first {
-    background: linear-gradient(to top, map-get($colour-text-alafrancaise, first-title) 0%, map-get($colour-text-alafrancaise, first-title) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
-}
 
-.anim-underline-secund {
-    background: linear-gradient(to top, map-get($colour-text-alafrancaise, secund) 0%, map-get($colour-text-alafrancaise, secund) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
-}
 
-.anim-underline-third {
-    background: linear-gradient(to top, map-get($colour-text-alafrancaise, third) 0%, map-get($colour-text-alafrancaise, third) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
+.anim-underline { /* see __animations.scss for extension.*/
+    &-first {
+        background: linear-gradient(to top, map-get($colour-text-alafrancaise, first-title) 0%, map-get($colour-text-alafrancaise, first-title) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
+    }
+    &-secund {
+        background: linear-gradient(to top, map-get($colour-text-alafrancaise, secund) 0%, map-get($colour-text-alafrancaise, secund) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
+    }
+    &-third {
+        background: linear-gradient(to top, map-get($colour-text-alafrancaise, third) 0%, map-get($colour-text-alafrancaise, third) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
+    }
 }
