--- a/Projets/OhMyFood/scss/Partials/Pages/menu-papilles.scss
+++ b/Projets/OhMyFood/scss/Partials/Pages/menu-papilles.scss
@@ -1,3 +1,8 @@
+/* IMPORTANT ! run sass with the command : npm run papilles*/
+/* IMPORTANT ! run sass with the command : npm run papilles*/
+/* IMPORTANT ! run sass with the command : npm run papilles*/
+/* IMPORTANT ! run sass with the command : npm run papilles*/
+
 @import "../Utils/variables";
 @import "../Utils/mixins";
 @import "../Base/base";
@@ -9,111 +14,117 @@
     @include menu-details;
 }
 .menus {
-    padding: 6.5vw; /*vw for responsive padding*/
-    text-align: center;
+    @include menu-details__menus;
     &__card {
-        width:90%;
-        height: auto;
-        margin: 0;
-        padding: 3.9vw;
-        padding-bottom: 6vw;
-        text-align: center;
-        box-shadow: 0 0 1rem #dad8d8;
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
+      @include menu-details__card;
     }
 }
 .font {
     font-weight: normal;
-    font-family: "arial black";
+    font-family: "arial black"; /*title on the white*/
+    @media (orientation: landscape) {
+        @media (min-width: 992px) {
+            font-size: 2.3vw;
+        }
+    }
     &__title {   
         &--papilles {
             font-family: 'cookie';
-            font-weight: normal;
             font-style: italic;
-            font-size: 10vw;
-            background: -webkit-linear-gradient(-80deg, map-get($colour-text-papilles, first) 0%,map-get($colour-text-papilles, secund) 50%, map-get($colour-text-papilles, third) 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            font-size: 6vw;
+            background: linear-gradient(80deg, map-get($colour-text-papilles, first) 0%,map-get($colour-text-papilles, secund) 50%, map-get($colour-text-papilles, third) 100%);
+            /*gradient color (degree of skew, $color left-to-right percent)*/
+            -webkit-background-clip: text; /*background becomes the color of the text*/
+            color: transparent;/*text being transparent allows you to see the background-clip work.*/
         }
     }
-}
-tr {
-    height: 3rem;
-}
-.font {
     &__table {
 		&--papilles {
-		font-size: 1.7vw;
-        font-family: "Segoe Print";
-        margin-bottom: 11rem;
-        @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
-            margin: 0;
-            font-size: 2.4vw;
+            font-size: 2vw;
+            font-family: "Segoe Print";
+            margin-bottom: 14.3vw;
+            @media (min-width: 992px) {
+                font-size: 2.4vw;
+            }
+            @media (orientation: landscape) {
+                font-size: 1.7vw;
+                @media (max-width: 768px) {
+                    font-size: 1.8vw;
+                }
+                @media (max-width: 992px) {
+                    font-size: 1.6vw;
+                }
+                @media (min-width: 992px) {
+                    font-size: 1.4vw;     
+                }
+            }
         }
-		}
+        &--title {
+            font-size: 2.4vw;
+            font-weight:bold;
+            @media (orientation: landscape) {
+                @media (min-width: 992px) {
+                    font-size: 2.1vw;
+                }
+            }
+        }
 	}
 }
+
+tr {
+    height: 3.9vw;
+}
+
 .table {
-    &__part {
-        height: 10rem;
-        vertical-align: bottom;
-        font-size: 2vw;
-    }  
     &__cell {
         &--th {
             border:1px black solid;
-            
         }
         &--left {
             text-align: left;
-            padding-left: 5rem;
-            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
-                padding-left: 1rem;
+            padding-left: 6.5vw;
+            @media(max-width:1200px) {
                 padding-right: 10vw;
 			}
         }
         &--right {
             text-align: right;
             font-weight: bold;
-            padding-right: 5rem;
-            @media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px), (max-device-width:991px) {
-				padding-right: 1rem;
-			}
-
+            padding-right: 6.5vw;
         }
     }
 }
 
-.double-line--first {
-    height:10%;   
+.double-line--first { 
     background: linear-gradient(to right, map-get($colour-text-papilles, first), map-get($colour-card, papilles), map-get($colour-card, papilles), map-get($colour-text-papilles, first)) no-repeat center;
-            background-size:90vw 5px;
+    /*no-repeat for 1 line*/
+    background-size:90vw 5px; /*horizontal size of the background, so the size of the gradient. height of the line.*/
 }
 
 
 
-.double-line--secund {
-    height:10%;   
+.double-line--secund { 
     background: linear-gradient(to right, map-get($colour-text-papilles, secund), map-get($colour-card, papilles), map-get($colour-card, papilles),map-get($colour-text-papilles, secund)) no-repeat center;
             background-size:90vw 5px;
     }
 
-.double-line--third {
-    height:10%;   
+.double-line--third { 
     background: linear-gradient(to right, map-get($colour-text-papilles, third), map-get($colour-card, papilles), map-get($colour-card, papilles), map-get($colour-text-papilles, third)) no-repeat center;
-            background-size:90vw 5px;
+    background-size:90vw 5px;
 }
 
-.anim-underline-first {
-    background: linear-gradient(to top, map-get($colour-text-papilles, first) 0%, map-get($colour-text-papilles, first) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
+
+
+.anim-underline {  /* see __animations.scss for extension.*/
+    &-first { 
+        background: linear-gradient(to top, map-get($colour-text-papilles, first) 0%, map-get($colour-text-papilles, first) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
 }
 
-.anim-underline-secund {
-    background: linear-gradient(to top, map-get($colour-text-papilles, secund) 0%, map-get($colour-text-papilles, secund) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
+    &-secund {
+        background: linear-gradient(to top, map-get($colour-text-papilles, secund) 0%, map-get($colour-text-papilles, secund) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
 }
 
-.anim-underline-third {
-    background: linear-gradient(to top, map-get($colour-text-papilles, third) 0%, map-get($colour-text-papilles, third) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
+    &-third {
+        background: linear-gradient(to top, map-get($colour-text-papilles, third) 0%, map-get($colour-text-papilles, third) 10%, transparent 10.01%) no-repeat left bottom / 0 100%;
+}
 }
