--- a/Projets/OhMyFood/scss/Partials/Utils/_mixins.scss
+++ b/Projets/OhMyFood/scss/Partials/Utils/_mixins.scss
@@ -14,11 +14,27 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    height: 750px;
-    >.menus__card {
-        width:100%;
-        margin: 0;
-    }
+}
+
+
+@mixin menu-details__menus {
+	padding: 0 12vw 12vw 12vw;
+    text-align: center;
+}
+
+@mixin menu-details__card {
+	display:flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 3.9vw;
+	text-align: center;
+	box-shadow: 0 0 1.3vw #dad8d8;
+	@media (orientation: landscape) {
+		@media (min-width: 992px) {
+			padding: 1.3vw;
+			padding-bottom: 2.5vw;
+		}
+	}
 }
 
 @mixin zoom-menu { 
