--- a/Projets/OhMyFood/scss/main.scss
+++ b/Projets/OhMyFood/scss/main.scss
@@ -2,43 +2,47 @@
 @import "./partials/Utils/mixins";
 @import "./partials/Components/animations";
 @import "./partials/Base/base";
-@import "./partials/Layouts/responsive";
 
-@import url('https://fonts.googleapis.com/css?family=Devonshire&display=swap'); /*font-family: devonshire (enchantee), menu segoe print*/
-@import url('https://fonts.googleapis.com/css?family=Croissant+One&display=swap'); /*font-family: 'Croissant One' (alafrancaise), Menu Cambria*/
-@import url('https://fonts.googleapis.com/css?family=Cookie&display=swap'); /*font-family: cookie (papilles)*/
-@import url('https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap'); /*font-family: Kaushan script (gout) */
+@import url('https://fonts.googleapis.com/css?family=Devonshire&display=swap'); //font-family: devonshire (enchantee), menu segoe print
+@import url('https://fonts.googleapis.com/css?family=Croissant+One&display=swap'); //font-family: 'Croissant One' (alafrancaise), Menu Cambria
+@import url('https://fonts.googleapis.com/css?family=Cookie&display=swap'); //font-family: cookie (papilles)
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap'); //font-family: Kaushan script (gout)
 
 .menus {
-	padding: 2.6vw 3.9vw;
+	padding: 1vw 2vw;
 	display:flex;
 	justify-content: center;
 	flex-wrap: wrap;
-	font-size:3.5vw;
-	@media (min-device-width:1200px) and (orientation: landscape) {
-		margin-bottom: 8vw;
+	@media (orientation: landscape) {
+		padding: 1.3vw 1.8vw; 
 	}
 	&__card {
 		width:40%;
-		height: 750px;
-		margin: 1rem;
+		height: 50vh; /*50% de la hauteur de l'écran = 50vh*/
+		margin: 1.3vw; /* 1.3% de la largeur de l'écran = 1.3vw*/
 		padding:1vw;
 		text-align: center;
-		box-shadow: 0 0 1rem #dad8d8;
+		box-shadow: 0 0 1.3vw #dad8d8;
 		display:flex;
 		flex-direction: column;
 		justify-content: center;
-		@media (min-device-width: 992px) and (orientation: landscape) {
-			width: 20%;
-			height: 25vw;
+		
+		@media (orientation: landscape) {
+			width:15%;
+			padding:0;
+			height : 40vh;
+			@media (max-width: 768px) {
+				width:40%;
+			}
+			@media (min-width: 768px) and (max-width: 992px) {
+				height: 50vh;
+				padding: 1.3vw;
+			}
+			@media (min-width: 992px) {
+				width: 20%;
+				height: 60vh;
+			}
 		}
-		@media (min-device-width:1280px) and (orientation: portrait) {
-			height: 60%;
-		}
-		/*@media (min-device-width: 991px) and (max-width: 991px) {
-			width : 90%;
-			height : 350px;
-		}*/
 		&--orange {
 			background: map-get($colour-card, enchantee);
 		}
@@ -54,59 +58,103 @@
 	}
 }
 
+.pos-rel {
+	position: relative;
+	bottom: 7%;
+
+	@media (orientation:landscape) {
+		bottom: 18%;
+		@media (min-width: 768px) and (max-width: 992px) {
+			bottom: 12%;
+		}
+	}
+
+	&__subtitle {
+
+		@media (orientation:landscape) {
+			@media (min-width: 501px) and (max-width: 768px) {
+				bottom: 25%;
+			}
+		}
+	}
+}
+
 .font {
-	font-weight: normal;
+	font-weight: normal; /* not default bold*/
 	&__title{
 		margin: 0;
+		@media (orientation: landscape) {
+			height: 50%; /*separate __title and __subtitle*/
+		}
 		&--enchantee {
 			font-family: 'Devonshire';
-			font-size: 3vw;
+			font-size: 5vw;
+			@media (orientation: landscape) {
+				font-size: 3vw;
+				line-height: 2.6vw; /*no big space between "la note" and "enchantee" if they are one above the other*/
+			}
 		}
 		&--alafrancaise {
-			font-size: 2vw;
+			font-size: 3.5vw;
 			font-family: 'Croissant One';
-			background: -webkit-linear-gradient(-80deg, map-get($colour-text-alafrancaise, first-title) 0%,map-get($colour-text-alafrancaise, secund) 50%, map-get($colour-text-alafrancaise, last-title) 100%);
-			-webkit-background-clip: text;
-			-webkit-text-fill-color: transparent;
-			@media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
-					font-size: 2vw;
-				}
+			background: linear-gradient(80deg, map-get($colour-text-alafrancaise, first-title) 0%,map-get($colour-text-alafrancaise, secund) 50%, map-get($colour-text-alafrancaise, last-title) 100%);
+			/*gradient color (degree of skew, $color left-to-right percent)*/
+			-webkit-background-clip: text; /*background becomes the color of the text */
+			color: transparent; /*text being transparent allows you to see the background-clip work.*/
+
+			@media (orientation: landscape) {
+				font-size: 2vw;
 			}
+		}
 		
 		&--papilles {
 			font-family: 'cookie';
-			font-weight: normal;
-			font-size: 3vw;
-			background: -webkit-linear-gradient(-80deg, map-get($colour-text-papilles, first) 0%,map-get($colour-text-papilles, secund) 50%, map-get($colour-text-papilles, third) 100%);
+			font-size: 5.5vw;
+			background: linear-gradient(80deg, map-get($colour-text-papilles, first) 0%,map-get($colour-text-papilles, secund) 50%, map-get($colour-text-papilles, third) 100%);
 			-webkit-background-clip: text;
-			-webkit-text-fill-color: transparent;
-			
-			@media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
-				font-size: 4.5vw;
+			color: transparent;
+
+			@media (orientation: landscape) {
+				font-size: 3.5vw;
 			}
 		}
 		&--gout {
 			font-family: 'kaushan script';
-			font-weight: normal;
-			font-size: 2.5vw;
-			background: -webkit-linear-gradient(-80deg, map-get($colour-text-gout, first) 0%,map-get($colour-text-gout, secund) 50%, map-get($colour-text-gout, third) 100%);
+			font-size: 4.5vw;
+			background: linear-gradient(80deg, map-get($colour-text-gout, first) 0%,map-get($colour-text-gout, secund) 50%, map-get($colour-text-gout, third) 100%);
 			-webkit-background-clip: text;
-			-webkit-text-fill-color: transparent;
-			@media (min-device-width:991px) and (max-device-width:1280px) and (max-width:991px) {
-				font-size: 4.5vw;
+			color: transparent;
+
+			@media (orientation: landscape) {
+				font-size: 2.8vw;
+				@media (max-width: 992px) {
+					font-size: 3vw;	
+				}
+				
 			}
 		}
 	}
+	
 	&__subtitle {
-		font-size:2vw;
+		font-size:5vw;
+
+		@media (orientation: landscape) {
+			font-size: 3vw;
+		}
+
 		&--enchantee {
+			font-size: 4vw;
 			font-family:'Segoe Print';
 			font-weight: bold;
-			margin-top: 1rem;
+			margin-top: 1.3vw;
+			@media (orientation: landscape) {
+				font-size: 3vw;
+			}
 		}
 		&--alafrancaise {
 			font-family:'Cambria';
 			font-weight: bold;
+			font-size: 3.5vw;
 			color: map-get($colour-text-alafrancaise, first);
 		}
 		&--papilles {
@@ -116,65 +164,56 @@
 		&--gout {
 			font-family: "Segoe Print";
 			color: map-get($colour-text-gout, first);
-
 		}
-	}
-}
-.zoom__menu {
-	&--enchantee,&--alafrancaise,&--papilles,&--gout {
-		@include zoom-menu;
 	}
 }
 
 .btn {
+	display: flex;
+	justify-content: center; /*.btn in the middle of the page*/
+	text-align: center; /*content of .btn being in the middle of his parent*/
+	margin-bottom: 15vw; /*footer being fixed, allows .btn to be full visible.*/
+	
+	@media (orientation: landscape) {
+		margin-bottom: 8vw; 
+	}
 	&--soon {
-	width: 45%;
-	@include main-style;
-	border-radius: 15px;
-	font-size: 4vw;
-	padding: 0.8rem;
-	margin: 2.6vw;
-	border: none;
-	@media (min-device-width: 992px) and (orientation: landscape) {
-		width: 25%;
-		font-size: 2vw;
-				
-	}
-	@media (min-device-width:991px) and (max-device-width:1200px) {
-		width: 25%;
-		font-size: 2vw;
-		margin: 1rem;
-		@media (max-width:991px) {
-			font-size: 3vw;
-			width: 35%;
-		}
-		@media (max-width:768px) 
-			{
-				font-size: 3vw;
-				width:40%;
+		width: 45%;
+		@include main-style; 
+		border-radius: 15px;
+		padding: 1.04vw;
+		margin: 2.6vw 0;
+		border: none;
+
+		@media (orientation:landscape) {
+			width: 25%;
+			
+			@media (max-width:768px) {
+				width: 35%;
+				padding: 0.8vw;
 			}
-	}
-	}
-	&__dot {
-		height: 25px;
-		width: 25px;
-		background-color: #fdcb46;
-		border-radius: 50%;
-		display: inline-block;
-		margin: 10px;
-		@media (min-device-width: 992px) and (orientation: landscape) {
-			height:20px;
-			width:20px;
+			@media (min-width: 992px)  {
+				padding: 0.5vw;
+			}
 		}
 
-		@media (min-device-width:991px) and (max-device-width:1280px) {
-			height: 15px;
-			width: 15px;
-			@media (max-width:991px) 
-			{
-				height:7px;
-				width:7px;
+		> h2 {
+			font-size: 4vw; 
+			margin: 0; /*bouton being too big with parent's margin*/
+			@media (orientation: landscape) {
+				font-size: 2vw;
+				@media (max-width: 992px) {
+					font-size: 2.5vw;
+				}
 			}
 		}
+	}
+
+	&__dot {
+		height: 10px;
+		width: 10px;
+		background-color: $colour-secondary;
+		border-radius: 50%;
+		vertical-align: top;
 	}
 }
